--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,6 +21,6 @@
         </ul>
     </nav>
     <div class="content">
-        <app-account></app-account>
+      <router-outlet></router-outlet>
     </div>
 </div>
