Added links to navigator bar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,10 +13,10 @@
             </li>
             <li class="group">Main pages</li>
             <li>
-                <a>FAQ</a>
+                <a routerLink="/faq" routerLinkActive="active">FAQ</a>
             </li>
             <li>
-                <a>Contacts</a>
+                <a routerLink="/contacts" routerLinkActive="active">Contacts</a>
             </li>
         </ul>
     </nav>
