splitted accounts view by ids

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,10 +6,10 @@
         <ul>
             <li class="group">Choose account</li>
             <li>
-                <a>Savings account</a>
+                <a routerLink="/account/1">Savings account</a>
             </li>
             <li>
-                <a>Checking account</a>
+                <a routerLink="/account/2">Checking account</a>
             </li>
             <li class="group">Main pages</li>
             <li>
