Added account-list component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,9 @@
     </div>
     <nav>
         <ul>
-            <li class="group">Choose account</li>
+            <li class="group">
+              <a routerLink="/accounts-list">My account</a>
+            </li>
             <li>
                 <a routerLink="/account/1">Savings account</a>
             </li>
