Added images htrough which ou can access account

--- a/src/app/account-list/account-list.component.html
+++ b/src/app/account-list/account-list.component.html
@@ -1,1 +1,5 @@
-<p>account-list works!</p>
+@for(account of accounts; track account.name){
+  <a [routerLink] ="['/account', account.id]">
+    <img [src]="account.imageUrl" width="300"/>
+  </a>
+}
