--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,8 @@
     </div>
     <nav>
         <ul>
-            <li class="group">
-              <a routerLink="/accounts-list">My account</a>
+            <li>
+              <a routerLink="/accounts-list">My accounts</a>
             </li>
             <li>
                 <a routerLink="/account/1">Savings account</a>
